Fix UI and attendence issue
